<resources>
    <string name="app_name">MeraGlove</string>
	
    <string name="service_name_180F">Service: Battery Service</string>
    <string name="service_uuid_180F">Service: 0000</string>
    <string name="service_name_181D">Service: Weight Scale</string>
    <string name="service_uuid_181D">Service: 0000</string>


    <string name="characteristic_name_2A19">Characteristic: Battery Level</string>
    <string name="characteristic_uuid_2A19">Characteristic: 0001</string>
    <string name="characteristic_name_2A9E">Characteristic: Weight Scale Feature</string>
    <string name="characteristic_uuid_2A9E">Characteristic: 0002</string>
    <string name="characteristic_name_2A9D">Characteristic: Weight Measurement</string>
    <string name="characteristic_uuid_2A9D">Characteristic: 2A9D</string>


    <color name="white">#FFFFFF</color>
    <color name="blue">#CEECF5</color>
    <string name="action_settings"></string>

    <string name="title_text">MeraGlove</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <string name="server_client_id">697223827411-7embqadmg5jbjgnu1llloi9o6t5gg7id.apps.googleusercontent.com</string>

</resources>
