<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/deviceView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="10dip"
    android:paddingLeft="10dip"
    android:paddingTop="10dip">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical">
        
	    <TextView
	        android:id="@+id/nameTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="15dp"
          android:paddingLeft="10dip"
	        android:text="Device name: " />
	
	    <TextView
	        android:id="@+id/rssiTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_marginBottom="10dp"
          android:paddingLeft="10dip"
	        android:text="RSSI" />
	        
      <Button
          android:id="@+id/button_connect"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingLeft="20dip"
          android:onClick="onConnect"
          android:text="Connect" />

        <TextView
            android:id="@+id/msgTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dip"
            android:text="" />

	        
    </LinearLayout>



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:paddingBottom="5dip"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:paddingLeft="10dip"
            android:textColor="#0000FF"
            android:text="@string/service_name_180F" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:text="@string/service_uuid_180F" />

    
        

              

        

        

        

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:textColor="#FF0000"
                android:text="@string/characteristic_name_2A19" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:text="2A19" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:text="rn" />




            <TextView
                android:id="@+id/text_180F_2A19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
	              android:tag="gatt_op_0000_0001"
                android:background="#E4FEFD"
                android:text="" />
               
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

		            <Button
		                android:id="@+id/button_read_180F_2A19"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:paddingLeft="20dip"
		                android:tag="gatt_op_0000_0001"
		                android:enabled="false"
                    android:onClick="onRead"
		                android:text="Read" />


                
        	</LinearLayout>

        	
        </LinearLayout>
        
	
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:paddingBottom="5dip"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:paddingLeft="10dip"
            android:textColor="#0000FF"
            android:text="@string/service_name_181D" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:text="@string/service_uuid_181D" />

    
        

              

        

        

        

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:textColor="#FF0000"
                android:text="@string/characteristic_name_2A9E" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:text="2A9E" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:text="r" />




            <TextView
                android:id="@+id/text_181D_2A9E"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
	              android:tag="gatt_op_181D_2A9E"
                android:background="#E4FEFD"
                android:text="" />
               
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

		            <Button
		                android:id="@+id/button_read_181D_2A9E"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:paddingLeft="20dip"
		                android:tag="gatt_op_0000_0002"
		                android:enabled="false"
                    android:onClick="onRead"
		                android:text="Read" />


                
        	</LinearLayout>

        	
        </LinearLayout>
        
    
        

        

        

        

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:textColor="#FF0000"
                android:text="@string/characteristic_name_2A9D" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:text="2A9D" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:text="i" />

        	
        </LinearLayout>
        
	
    </LinearLayout>
</LinearLayout>
</ScrollView>